@@ -1,3 +1,9 @@
+2004-06-26  Kai Grossjohann  <kai.grossjohann@gmx.net>
+	Merge from trunk.
+
+	* tramp.el (tramp-handle-file-remote-p): New implementation to
+	agree with new return value of `file-remote-p'.
+
 2004-05-30  Kai Grossjohann  <kai.grossjohann@gmx.net>
 
 	Sync with trunk.
